k8s/deployment-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reports-server
  namespace: production
spec:
  selector:
    matchLabels:
      app: reports-server
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: reports-server
        app: reports-server
    spec:
      terminationGracePeriodSeconds: 30
      containers:
        - name: reports-server
          image: registry-gitlab.imas.kz/imas/reports:latest
          args: [ "-s" ]
          imagePullPolicy: "Always"
          ports:
            - containerPort: 5007
          resources:
            requests:
              memory: "700Mi"
              cpu: "2"
            limits:
              memory: "700Mi"
              cpu: "2"
      imagePullSecrets:
        - name: regcred
