k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: reports-service
  namespace: production
spec:
  selector:
    app.kubernetes.io/name: reports-server
  ports:
    - protocol: TCP
      port: 5007
      targetPort: 5007
