k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: reports-ingress
  namespace: production
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: "reports.imas.kz"
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: reports-service
              port:
                number: 5007
